--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^4.6.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "aws-amplify": "^5.1.4",
     "bootstrap": "5.0.2",
     "immer": "9.0.5",
@@ -34,8 +35,10 @@
     "react-router-dom": "5.2.0",
     "react-toastify": "7.0.4",
     "redux": "4.1.0",
+    "redux-saga": "^1.2.3",
     "redux-thunk": "2.3.0",
-    "reselect": "4.0.0"
+    "reselect": "4.0.0",
+    "saga": "^4.0.0-alpha"
   },
   "devDependencies": {
     "@babel/core": "7.14.6",
