--- a/package.json
+++ b/package.json
@@ -24,13 +24,17 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^4.6.0",
+    "@popperjs/core": "^2.11.7",
     "@reduxjs/toolkit": "^1.9.5",
+    "acorn": "^8.8.2",
     "aws-amplify": "^5.1.4",
     "bootstrap": "5.0.2",
     "immer": "9.0.5",
+    "maplibre-gl": "^2.4.0",
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-native": "^0.71.7",
     "react-redux": "7.2.4",
     "react-router-dom": "5.2.0",
     "react-toastify": "7.0.4",
