--- a/package.json
+++ b/package.json
@@ -23,7 +23,14 @@
     }
   },
   "dependencies": {
+    "@aws-amplify/auth": "^5.3.5",
+    "@aws-amplify/core": "^5.2.0",
+    "@aws-amplify/datastore": "^4.2.1",
+    "@aws-amplify/geo": "^2.0.31",
+    "@aws-amplify/notifications": "^1.1.5",
+    "@aws-amplify/storage": "^5.2.5",
     "@aws-amplify/ui-react": "^4.6.0",
+    "@aws-amplify/ui-react-storage": "^1.2.0",
     "@popperjs/core": "^2.11.7",
     "@reduxjs/toolkit": "^1.9.5",
     "acorn": "^8.8.2",
